Change category name

--- a/azureiothub.html
+++ b/azureiothub.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('azureiothub',{
-        category: 'cloud',
+        category: 'Azure',
         color: '#00abec',
         defaults: {
             name: {value:"Azure IoT Hub"},
@@ -21,7 +21,7 @@
     });
 
     RED.nodes.registerType('azureiothubregistry',{
-        category: 'cloud',
+        category: 'Azure',
         color: '#00abec',
         defaults: {
             name: {value:"Azure IoT Hub Registry"}
@@ -41,7 +41,7 @@
     });
 
     RED.nodes.registerType('azureiothubreceiver',{
-        category: 'cloud',
+        category: 'Azure',
         color: '#00abec',
         defaults: {
             name: {value:"Azure IoT Hub Receiver"}
@@ -61,7 +61,7 @@
     });
 
     RED.nodes.registerType('azureiothubdevicetwin',{
-        category: 'cloud',
+        category: 'Azure',
         color: '#00abec',
         defaults: {
             name: {value:"Azure IoT Hub Device Twin"}
